// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`balances complex 1`] = `
Array [
  Object {
    "amount": "3000000.0000000000000000",
    "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
  },
  Object {
    "amount": "300000000.0000000000000000",
    "denom": "ibc/E6931F78057F7CC5DA0FD6CEF82FF39373A6E0452BF1FD76910B93292CF356C1",
  },
  Object {
    "amount": "3000000.0000000000000000",
    "denom": "uosmo",
  },
]
`;

exports[`balances complex 2`] = `
Array [
  Object {
    "price": 1.81,
    "symbol": "AKT",
    "value": "5.430000000000000000",
  },
  Object {
    "price": 0.366689,
    "symbol": "CRO",
    "value": "1.100067000000000000",
  },
  Object {
    "price": 9.1,
    "symbol": "OSMO",
    "value": "27.300000000000000000",
  },
]
`;

exports[`balances simple 1`] = `
Array [
  Object {
    "amount": "290000.0000000000000000",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
  },
  Object {
    "amount": "3000000.0000000000000000",
    "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
  },
]
`;

exports[`balances simple 2`] = `
Array [
  Object {
    "price": 36.63,
    "symbol": "ATOM",
    "value": "10.622700000000000000",
  },
  Object {
    "price": 1.81,
    "symbol": "AKT",
    "value": "5.430000000000000000",
  },
]
`;

exports[`joins complex 1`] = `
Array [
  Object {
    "amount": "607771",
    "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
  },
  Object {
    "amount": "300000000",
    "denom": "ibc/E6931F78057F7CC5DA0FD6CEF82FF39373A6E0452BF1FD76910B93292CF356C1",
  },
  Object {
    "amount": "120886",
    "denom": "uosmo",
  },
]
`;

exports[`joins simple 1`] = `
Array [
  Object {
    "amount": "3000000",
    "denom": "ibc/1480B8FD20AD5FCAE81EA87584D269547DD4D436843C1D20F15E00EB64743EF4",
  },
  Object {
    "amount": "76365",
    "denom": "ibc/27394FB092D2ECCD56123C74F36E4C1F926001CEADA9CA97EA622B25F41E5EB2",
  },
]
`;
